// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyOrganization Component renders correctly 1`] = `
.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
}

.emotion-1.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-1.Mui-selected {
  background-color: rgba(51, 122, 135, 0.08);
}

.emotion-1.Mui-selected.Mui-focusVisible {
  background-color: rgba(51, 122, 135, 0.2);
}

.emotion-1.Mui-disabled {
  opacity: 0.38;
}

.emotion-1.Mui-disabled {
  opacity: 1;
}

.emotion-1.active {
  background-color: #fff;
}

.emotion-1.leftNav.active {
  border-top: 1px solid #d4e9e7;
  border-bottom: 1px solid #d4e9e7;
}

.emotion-1.navLink,
.emotion-1.navLink .MuiListItemText-root {
  color: #969696;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
  display: grid;
  width: 100%;
  margin-bottom: 8px;
}

.emotion-3 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
  display: block;
}

.emotion-4 {
  margin: 0;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.8125rem;
  line-height: 1.43;
  color: rgba(0, 0, 0, 0.54);
  display: block;
}

.emotion-5 {
  margin-top: 11px;
  padding-bottom: 3px;
}

.emotion-5 span {
  margin-left: 4px;
  color: rgba(0, 0, 0, 0.38);
}

.emotion-6 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
  margin-bottom: 8px;
  margin-left: -16px;
  width: 500px;
}

.emotion-8 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
  display: grid;
  width: 100%;
  margin-bottom: 0;
}

.emotion-10 {
  padding-right: 10px;
}

.emotion-11 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-11 iconButton {
  margin-right: 8px;
}

.emotion-13 {
  width: calc(500px - 32px);
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-top: 11px;
  padding-bottom: 11px;
}

.emotion-14.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-14.Mui-selected {
  background-color: rgba(51, 122, 135, 0.08);
}

.emotion-14.Mui-selected.Mui-focusVisible {
  background-color: rgba(51, 122, 135, 0.2);
}

.emotion-14.Mui-disabled {
  opacity: 0.38;
}

.emotion-14.Mui-disabled {
  opacity: 1;
}

.emotion-14.active {
  background-color: #fff;
}

.emotion-14.leftNav.active {
  border-top: 1px solid #d4e9e7;
  border-bottom: 1px solid #d4e9e7;
}

.emotion-14.navLink,
.emotion-14.navLink .MuiListItemText-root {
  color: #969696;
}

.emotion-15 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
}

.emotion-18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Lato,sans-serif;
  font-weight: 500;
  font-size: 0.8125rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #337a87;
  border-radius: 2px;
  font-size: 14px;
  font-weight: bold;
  padding: 10px 15px;
}

.emotion-18::-moz-focus-inner {
  border-style: none;
}

.emotion-18.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-18 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-18:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(51, 122, 135, 0.04);
}

@media (hover: none) {
  .emotion-18:hover {
    background-color: transparent;
  }
}

.emotion-18.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-18:hover {
  colors: #337a87;
}

.emotion-18.MuiButton-text {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-19 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-19>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-21 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-22 {
  height: 30px;
  padding: 15px;
}

.emotion-23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  margin-left: -11px;
  margin-right: 16px;
  margin-top: 18px;
  width: calc(500px + 32px);
}

.emotion-23.Mui-disabled {
  cursor: default;
}

.emotion-23 .MuiFormControlLabel-label.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  padding: 9px;
  border-radius: 50%;
  color: rgba(0, 0, 0, 0.54);
  color: rgba(10, 10, 11, 0.78);
}

.emotion-24::-moz-focus-inner {
  border-style: none;
}

.emotion-24.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-24 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-24:hover {
  background-color: rgba(51, 122, 135, 0.04);
}

@media (hover: none) {
  .emotion-24:hover {
    background-color: transparent;
  }
}

.emotion-24.Mui-checked,
.emotion-24.MuiCheckbox-indeterminate {
  color: #337a87;
}

.emotion-24.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-25 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.emotion-28 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
}

.emotion-29 {
  height: 0;
  overflow: hidden;
  -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  visibility: hidden;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-31 {
  width: 100%;
}

.emotion-32 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  display: grid;
  grid-template-columns: minmax(max-content, 500px) max-content max-content;
}

.emotion-32.has-sso {
  grid-template-columns: 455px 1fr;
}

.emotion-33 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
  margin-bottom: -4px;
  margin-right: 8px;
}

.emotion-33 iconButton {
  margin-right: 8px;
}

.emotion-34 {
  margin-left: 4px;
  margin-right: 4px;
}

.emotion-37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: Lato,sans-serif;
  font-weight: 500;
  font-size: 0.8125rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #fff;
  background-color: #337a87;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
  border-radius: 2px;
  font-size: 14px;
  font-weight: bold;
  margin-left: 4px;
  margin-right: 4px;
}

.emotion-37::-moz-focus-inner {
  border-style: none;
}

.emotion-37.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-37 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-37:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(35, 85, 94);
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
}

@media (hover: none) {
  .emotion-37:hover {
    background-color: #337a87;
  }
}

.emotion-37:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.emotion-37.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-37.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-37:hover {
  colors: #337a87;
}

.emotion-37.MuiButton-text {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-38 {
  color: rgba(0, 0, 0, 0.38);
  margin: 15px 0;
}

.emotion-39 {
  gap: 8px;
}

.emotion-40 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-40 iconButton {
  margin-right: 8px;
}

.emotion-41 {
  background-color: #f7f7f7;
  margin-top: 48px;
  padding: 16px;
}

.emotion-41>h5 {
  margin-top: 0;
  margin-bottom: 0;
}

<div
  class="margin-top-small"
>
  <h2
    class="margin-top-small"
  >
    Organization and billing
  </h2>
  <ul
    class="MuiList-root MuiList-padding emotion-0"
  >
    <li
      class="margin-top-small org-settings-item"
    >
      <div
        class="MuiListItem-root flexbox column MuiListItem-gutters MuiListItem-padding MuiListItem-alignItemsFlexStart emotion-1"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline emotion-2"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
          >
            Organization name
          </span>
          <div
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary two-columns emotion-4"
          >
            <div>
              <div
                class="clickable emotion-5"
              >
                test
                <span>
                  (
                  1
                  )
                </span>
              </div>
            </div>
            <a
              class="align-right"
            />
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth emotion-6"
        />
      </div>
    </li>
    <li
      class="margin-top-small org-settings-item"
    >
      <div
        class="MuiListItem-root flexbox column MuiListItem-gutters MuiListItem-padding MuiListItem-alignItemsFlexStart emotion-1"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline emotion-8"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
          >
            <div
              class="flexbox center-aligned"
            >
              <div
                class="emotion-10"
              >
                Organization token
              </div>
              <div
                class=""
                data-mui-internal-clone-element="true"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-11"
                  data-testid="InfoIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </div>
            </div>
          </span>
          <div
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
          >
            <div
              class="emotion-13"
            >
              <div
                class="MuiListItem-root attributes MuiListItem-padding emotion-14"
              >
                <div
                  class="MuiListItemText-root emotion-15"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
                    title="test"
                  >
                    <span
                      class="inventory-text tenant-token-text"
                    >
                      test
                    </span>
                     
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth emotion-6"
        />
      </div>
      <div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-18"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-19"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-11"
              data-testid="FileCopyIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4 6 6v10c0 1.1-.9 2-2 2H7.99C6.89 23 6 22.1 6 21l.01-14c0-1.1.89-2 1.99-2h7zm-1 7h5.5L14 6.5V12z"
              />
            </svg>
          </span>
          Copy to clipboard
          <span
            class="MuiTouchRipple-root emotion-21"
          />
        </button>
        <div
          class="emotion-22"
        />
      </div>
    </li>
  </ul>
  <div
    class="flexbox center-aligned"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd margin-bottom-small emotion-23"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-24"
      >
        <input
          class="PrivateSwitchBase-input emotion-25"
          data-indeterminate="false"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-11"
          data-testid="CheckBoxOutlineBlankIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root emotion-21"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-28"
      >
        Enable SAML single sign-on
      </span>
    </label>
  </div>
  <div
    class="MuiCollapse-root MuiCollapse-vertical margin-left-large MuiCollapse-hidden emotion-29"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical emotion-30"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-31"
      >
        <div
          class="flexbox center-aligned emotion-32 "
        >
          <div
            class="dropzone onboard dashboard-placeholder flexbox centered"
            role="presentation"
            tabindex="0"
          >
            <input
              style="display: none;"
              tabindex="-1"
              type="file"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-33"
              data-testid="CloudUploadIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
              />
            </svg>
             Drag here or 
            <a
              class="emotion-34"
            >
              browse
            </a>
             to upload a metadata document
          </div>
          <div>
            or 
            <a>
              input with the text editor
            </a>
          </div>
          <div
            class="flexbox"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-18"
              tabindex="0"
              type="button"
            >
              Cancel
              <span
                class="MuiTouchRipple-root emotion-21"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium emotion-37"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Save
            </button>
          </div>
        </div>
        <p
          class="emotion-38 icon flexbox center-aligned emotion-39 "
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-40"
            data-testid="InfoOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
            />
          </svg>
          Submit the metadata document from your Identity Provider
        </p>
      </div>
    </div>
  </div>
  <div
    class="emotion-41"
  >
    <h5>
      Billing
    </h5>
    <ul
      class="MuiList-root MuiList-padding emotion-0"
    >
      <li
        class="margin-top-small org-settings-item"
      >
        <div
          class="MuiListItem-root flexbox column MuiListItem-gutters MuiListItem-padding MuiListItem-alignItemsFlexStart emotion-1"
        >
          <div
            class="MuiListItemText-root MuiListItemText-multiline emotion-2"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
            >
              Current plan
            </span>
            <div
              class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary two-columns emotion-4"
            >
              <div>
                Trial
              </div>
              <a
                class="align-right"
                href="https://mender.io/plans/pricing"
                rel="noopener noreferrer"
                target="_blank"
              >
                Compare product plans
              </a>
            </div>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth emotion-6"
          />
          <div
            class="flexbox centered muted"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-40"
              data-testid="ErrorIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
            <span
              class="margin-left-small"
            >
              Your trial expires in 
              6 months
              . 
              <a
                href="/settings/upgrade"
              >
                Upgrade to a paid plan
              </a>
            </span>
          </div>
        </div>
      </li>
      <li
        class="margin-top-small org-settings-item"
      >
        <div
          class="MuiListItem-root flexbox column MuiListItem-gutters MuiListItem-padding MuiListItem-alignItemsFlexStart emotion-1"
        >
          <div
            class="MuiListItemText-root MuiListItemText-multiline emotion-2"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
            >
              Current add-ons
            </span>
            <div
              class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary two-columns emotion-4"
            >
              <div>
                Configure, Monitor
              </div>
              <a
                class="align-right"
              >
                Purchase an add-on
              </a>
            </div>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth emotion-6"
          />
          <div
            class="flexbox centered muted"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-40"
              data-testid="ErrorIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
            <span
              class="margin-left-small"
            >
              Your trial expires in 
              6 months
              . 
              <a
                href="/settings/upgrade"
              >
                Upgrade to a paid plan
              </a>
            </span>
          </div>
        </div>
        <div
          class="margin-left-small margin-bottom"
        >
          <a
            class="flexbox center-aligned"
            href="https://mender.io/plans/pricing"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              style="max-width: 200px;"
            >
              Compare plans and add-ons at mender.io
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-40"
              data-testid="OpenInNewIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </div>
      </li>
    </ul>
    <p
      class="margin-left-small margin-right-small"
      style="max-width: 500px;"
    >
      <a
        href=""
      >
        End trial
         and deactivate account
      </a>
    </p>
  </div>
</div>
`;

exports[`smaller components renders CancelSubscriptionAlert correctly 1`] = `
<div
  class="margin-top-large alert alert-error"
  style="max-width: 500px;"
>
  <p>
    We've started the process to cancel your plan and deactivate your account.
  </p>
  <p>
    We'll send you an email confirming your deactivation. If you have any question at all, contact us at
     
    <strong>
      <a
        href="mailto:support@mender.io"
      >
        support@mender.io
      </a>
    </strong>
  </p>
</div>
`;

exports[`smaller components renders CancelSubscriptionButton correctly 1`] = `
<p
  class="margin-left-small margin-right-small"
  style="max-width: 500px;"
>
  <a
    href=""
  >
    End trial
     and deactivate account
  </a>
</p>
`;

exports[`smaller components renders DeviceLimitExpansionNotification correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div
  class="flexbox centered"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall muted margin-right-small emotion-0"
    data-testid="ErrorIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
    />
  </svg>
  <div
    class="muted"
    style="margin-right: 4px;"
  >
    To increase your device limit,
     
  </div>
  <a
    href="/settings/upgrade"
  >
    upgrade to a paid plan
  </a>
  <div
    class="muted"
  >
    .
  </div>
</div>
`;

exports[`smaller components renders OrgHeader correctly 1`] = `
.emotion-0 {
  padding-right: 10px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

<div
  class="flexbox center-aligned"
>
  <div
    class="emotion-0"
  >
    Organization token
  </div>
  <div
    class=""
    data-mui-internal-clone-element="true"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-1"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>
</div>
`;

exports[`smaller components renders TrialExpirationNote correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div
  class="flexbox centered muted"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
    data-testid="ErrorIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
    />
  </svg>
  <span
    class="margin-left-small"
  >
    Your trial expires in 
    9 months
    . 
    <a
      href="/settings/upgrade"
    >
      Upgrade to a paid plan
    </a>
  </span>
</div>
`;
